== 4 August 2025

gperftools 2.17 is out!

We have had a few relatively simple updates since the RC release.

* Salvatore Dipietro has contributed SB instruction support for
  spinlock delay loops on newer ARMs.

* libgcc backtrace capturing method now handles deep backtraces
  better.

* PPC+musl users can now workaround some issues building PPC-specific
  backtrace code by adding
  TCMALLOC_DISABLE_PPC_FRAME_POINTER_BACKTRACER preprocessor
  define. Much thanks to Josef Schlehofer for reporting the
  problem. See details in
  https://github.com/gperftools/gperftools/issues/1602.

* Jackie Cui has contributed a small change to the page heap span
  selection logic that makes a big difference in reducing the amount
  of used memory in some workloads. See
  https://github.com/gperftools/gperftools/pull/1604 for further
  details.

Much thanks to all the contributors.

== 6 March 2025

gperftools 2.17rc is out!

2.17 headline changes are removal of heap leak checker and removal of
legacy Perl pprof implementation. People should install and use much,
much improved pprof implementation from github.com/google/pprof.

Here is a complete list of reasonably notable changes:

* [headline] heap leak checker has been amputated, as promised earlier

* [headline] we don't ship pprof anymore. People need to get modern
  and awesome pprof implementation from github.com/google/pprof

* we now have some basic CI infrastructure via Github Actions

* we now have basic Bazel support

* our docs have been slightly updated and converted to AsciiDoc format

* we now implement C23 free{,_aligned}_sized functions (but no libc-s
  offer those yet anyway)

* FreeBSD bits don't depend on procfs anymore (proc maps iterator was
  broken anyway; now it works)

* we don't offer mmap profiling anymore. It wasn't entirely complete
  for some years now, and killing it has eliminated a lot of
  complexity. MMap hooks are still part of ABI, but they do nothing.
