@@ -1,4 +1,4 @@
-module(name = "gperftools", version = "2.17", compatibility_level = 2)
+module(name = "gperftools", version = "2.17.1", compatibility_level = 2)
 
 bazel_dep(name = "platforms", version = "0.0.11")
 bazel_dep(name = "googletest", version = "1.15.2", dev_dependency = True)
